--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ extracted_embeddings/hubert_base_ls960_librispeech_train_extracted.pt
 extracted_embeddings/hubert_base_ls960_spokencoco_val_extracted.pt
 extracted_embeddings/wav2vec_small_librispeech_train_extracted.pt
 extracted_embeddings/wav2vec_small_spokencoco_val_extracted.pt
+extract_fast_vgs.out
+extract.sh
