--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,25 @@ extracted_embeddings/wav2vec_random_librispeech_train_extracted.pt
 extracted_embeddings/wav2vec_random_spokencoco_val_extracted.pt
 GloVe/glove.840B.300d.txt
 GloVe/glove.840B.300d.zip
+kernel.1380.out
+pairwise_distances/fast_vgs_librispeech_train_pairwise_distance.pt
+pairwise_distances/fast_vgs_plus_librispeech_train_pairwise_distance.pt
+pairwise_distances/fast_vgs_plus_spokencoco_val_pairwise_distance.pt
+pairwise_distances/fast_vgs_spokencoco_val_pairwise_distance.pt
+pairwise_distances/wav2vec_random_spokencoco_val_pairwise_distance.pt
+pairwise_distances/wav2vec_random_librispeech_train_pairwise_distance.pt
+pairwise_distances/wav2vec_small_librispeech_train_pairwise_distance.pt
+pairwise_distances/wav2vec_small_spokencoco_val_pairwise_distance.pt
+scc_generated_trees.pt
+hubert_base_ls960_spokencoco_val_pairwise_distance.pt
+hubert_base_ls960_librispeech_train_pairwise_distance.pt
+audio_emb_pairwise_distance.pt
+libri_generated_trees.pt
+kernel.sh
+run_bash.sh
+run.sh
+slurm_run_model.sh
+scc_trees_kernel.pt
+debug.ipynb
+rsa.ipynb
+audio_distance.1377.out
