--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,25 @@ scc_trees_kernel.pt
 debug.ipynb
 rsa.ipynb
 audio_distance.1377.out
+pairwise_distances/fast_vgs_librispeech_train_pairwise_distance_full.pt
+pairwise_distances/fast_vgs_plus_librispeech_train_pairwise_distance_full.pt
+pairwise_distances/fast_vgs_plus_spokencoco_val_pairwise_distance_full.pt
+pairwise_distances/fast_vgs_spokencoco_val_pairwise_distance_full.pt
+pairwise_distances/hubert_base_ls960_librispeech_train_pairwise_distance_full.pt
+pairwise_distances/hubert_base_ls960_spokencoco_val_pairwise_distance_full.pt
+pairwise_distances/wav2vec_random_librispeech_train_pairwise_distance_full.pt
+pairwise_distances/wav2vec_random_spokencoco_val_pairwise_distance_full.pt
+pairwise_distances/wav2vec_small_librispeech_train_pairwise_distance_full.pt
+pairwise_distances/wav2vec_small_spokencoco_val_pairwise_distance_full.pt
+tree_kernel/libri_trees_0.5_42_kernel.pt
+tree_kernel/libri_trees_0.5_666_kernel.pt
+tree_kernel/libri_trees_0.5kernel.pt
+tree_kernel/libri_trees_1kernel.pt
+tree_kernel/scc_trees_0.5_42_kernel.pt
+tree_kernel/scc_trees_0.5_666_kernel.pt
+tree_kernel/scc_trees_0.5kernel.pt
+tree_kernel/scc_trees_1kernel.pt
+pairwise_distances/fast_vgs_librispeech_train_pairwise_distance_full.pt
+__pycache__/kernel_calc.cpython-39.pyc
+utils/__pycache__/custom_classes.cpython-39.pyc
+utils/__pycache__/custom_functions.cpython-39.pyc
