added sentence embedding generation, updated gitignore, added rsa plotting and updated ridge model run script

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,139 @@ pairwise_distances/fast_vgs_librispeech_train_pairwise_distance_full.pt
 __pycache__/kernel_calc.cpython-39.pyc
 utils/__pycache__/custom_classes.cpython-39.pyc
 utils/__pycache__/custom_functions.cpython-39.pyc
+figs/rsa_relations/fast_vgs_librispeech_train_0.png
+figs/rsa_relations/fast_vgs_librispeech_train_1.png
+figs/rsa_relations/fast_vgs_librispeech_train_2.png
+figs/rsa_relations/fast_vgs_librispeech_train_3.png
+figs/rsa_relations/fast_vgs_librispeech_train_4.png
+figs/rsa_relations/fast_vgs_librispeech_train_5.png
+figs/rsa_relations/fast_vgs_librispeech_train_6.png
+figs/rsa_relations/fast_vgs_librispeech_train_7.png
+figs/rsa_relations/fast_vgs_librispeech_train_8.png
+figs/rsa_relations/fast_vgs_librispeech_train_9.png
+figs/rsa_relations/fast_vgs_librispeech_train_10.png
+figs/rsa_relations/fast_vgs_librispeech_train_11.png
+figs/rsa_relations/fast_vgs_librispeech_train_12.png
+figs/rsa_relations/fast_vgs_plus_librispeech_train_0.png
+figs/rsa_relations/fast_vgs_plus_librispeech_train_1.png
+figs/rsa_relations/fast_vgs_plus_librispeech_train_2.png
+figs/rsa_relations/fast_vgs_plus_librispeech_train_3.png
+figs/rsa_relations/fast_vgs_plus_librispeech_train_4.png
+figs/rsa_relations/fast_vgs_plus_librispeech_train_5.png
+figs/rsa_relations/fast_vgs_plus_librispeech_train_6.png
+figs/rsa_relations/fast_vgs_plus_librispeech_train_7.png
+figs/rsa_relations/fast_vgs_plus_librispeech_train_8.png
+figs/rsa_relations/fast_vgs_plus_librispeech_train_9.png
+figs/rsa_relations/fast_vgs_plus_librispeech_train_10.png
+figs/rsa_relations/fast_vgs_plus_librispeech_train_11.png
+figs/rsa_relations/fast_vgs_plus_librispeech_train_12.png
+figs/rsa_relations/fast_vgs_plus_spokencoco_val_0.png
+figs/rsa_relations/fast_vgs_plus_spokencoco_val_1.png
+figs/rsa_relations/fast_vgs_plus_spokencoco_val_2.png
+figs/rsa_relations/fast_vgs_plus_spokencoco_val_3.png
+figs/rsa_relations/fast_vgs_plus_spokencoco_val_4.png
+figs/rsa_relations/fast_vgs_plus_spokencoco_val_5.png
+figs/rsa_relations/fast_vgs_plus_spokencoco_val_6.png
+figs/rsa_relations/fast_vgs_plus_spokencoco_val_7.png
+figs/rsa_relations/fast_vgs_plus_spokencoco_val_8.png
+figs/rsa_relations/fast_vgs_plus_spokencoco_val_9.png
+figs/rsa_relations/fast_vgs_plus_spokencoco_val_10.png
+figs/rsa_relations/fast_vgs_plus_spokencoco_val_11.png
+figs/rsa_relations/fast_vgs_plus_spokencoco_val_12.png
+figs/rsa_relations/fast_vgs_spokencoco_val_0.png
+figs/rsa_relations/fast_vgs_spokencoco_val_1.png
+figs/rsa_relations/fast_vgs_spokencoco_val_2.png
+figs/rsa_relations/fast_vgs_spokencoco_val_3.png
+figs/rsa_relations/fast_vgs_spokencoco_val_4.png
+figs/rsa_relations/fast_vgs_spokencoco_val_5.png
+figs/rsa_relations/fast_vgs_spokencoco_val_6.png
+figs/rsa_relations/fast_vgs_spokencoco_val_7.png
+figs/rsa_relations/fast_vgs_spokencoco_val_8.png
+figs/rsa_relations/fast_vgs_spokencoco_val_9.png
+figs/rsa_relations/fast_vgs_spokencoco_val_10.png
+figs/rsa_relations/fast_vgs_spokencoco_val_11.png
+figs/rsa_relations/fast_vgs_spokencoco_val_12.png
+figs/rsa_relations/hubert_base_ls960_librispeech_train_0.png
+figs/rsa_relations/hubert_base_ls960_librispeech_train_1.png
+figs/rsa_relations/hubert_base_ls960_librispeech_train_2.png
+figs/rsa_relations/hubert_base_ls960_librispeech_train_3.png
+figs/rsa_relations/hubert_base_ls960_librispeech_train_4.png
+figs/rsa_relations/hubert_base_ls960_librispeech_train_5.png
+figs/rsa_relations/hubert_base_ls960_librispeech_train_6.png
+figs/rsa_relations/hubert_base_ls960_librispeech_train_7.png
+figs/rsa_relations/hubert_base_ls960_librispeech_train_8.png
+figs/rsa_relations/hubert_base_ls960_librispeech_train_9.png
+figs/rsa_relations/hubert_base_ls960_librispeech_train_10.png
+figs/rsa_relations/hubert_base_ls960_librispeech_train_11.png
+figs/rsa_relations/hubert_base_ls960_spokencoco_val_0.png
+figs/rsa_relations/hubert_base_ls960_spokencoco_val_1.png
+figs/rsa_relations/hubert_base_ls960_spokencoco_val_2.png
+figs/rsa_relations/hubert_base_ls960_spokencoco_val_3.png
+figs/rsa_relations/hubert_base_ls960_spokencoco_val_4.png
+figs/rsa_relations/hubert_base_ls960_spokencoco_val_5.png
+figs/rsa_relations/hubert_base_ls960_spokencoco_val_6.png
+figs/rsa_relations/hubert_base_ls960_spokencoco_val_7.png
+figs/rsa_relations/hubert_base_ls960_spokencoco_val_8.png
+figs/rsa_relations/hubert_base_ls960_spokencoco_val_9.png
+figs/rsa_relations/hubert_base_ls960_spokencoco_val_10.png
+figs/rsa_relations/hubert_base_ls960_spokencoco_val_11.png
+figs/rsa_relations/wav2vec_random_librispeech_train_0.png
+figs/rsa_relations/wav2vec_random_librispeech_train_1.png
+figs/rsa_relations/wav2vec_random_librispeech_train_2.png
+figs/rsa_relations/wav2vec_random_librispeech_train_3.png
+figs/rsa_relations/wav2vec_random_librispeech_train_4.png
+figs/rsa_relations/wav2vec_random_librispeech_train_5.png
+figs/rsa_relations/wav2vec_random_librispeech_train_6.png
+figs/rsa_relations/wav2vec_random_librispeech_train_7.png
+figs/rsa_relations/wav2vec_random_librispeech_train_8.png
+figs/rsa_relations/wav2vec_random_librispeech_train_9.png
+figs/rsa_relations/wav2vec_random_librispeech_train_10.png
+figs/rsa_relations/wav2vec_random_librispeech_train_11.png
+figs/rsa_relations/wav2vec_random_spokencoco_val_0.png
+figs/rsa_relations/wav2vec_random_spokencoco_val_1.png
+figs/rsa_relations/wav2vec_random_spokencoco_val_2.png
+figs/rsa_relations/wav2vec_random_spokencoco_val_3.png
+figs/rsa_relations/wav2vec_random_spokencoco_val_4.png
+figs/rsa_relations/wav2vec_random_spokencoco_val_5.png
+figs/rsa_relations/wav2vec_random_spokencoco_val_6.png
+figs/rsa_relations/wav2vec_random_spokencoco_val_7.png
+figs/rsa_relations/wav2vec_random_spokencoco_val_8.png
+figs/rsa_relations/wav2vec_random_spokencoco_val_9.png
+figs/rsa_relations/wav2vec_random_spokencoco_val_10.png
+figs/rsa_relations/wav2vec_random_spokencoco_val_11.png
+figs/rsa_relations/wav2vec_small_librispeech_train_0.png
+figs/rsa_relations/wav2vec_small_librispeech_train_1.png
+figs/rsa_relations/wav2vec_small_librispeech_train_2.png
+figs/rsa_relations/wav2vec_small_librispeech_train_3.png
+figs/rsa_relations/wav2vec_small_librispeech_train_4.png
+figs/rsa_relations/wav2vec_small_librispeech_train_5.png
+figs/rsa_relations/wav2vec_small_librispeech_train_6.png
+figs/rsa_relations/wav2vec_small_librispeech_train_7.png
+figs/rsa_relations/wav2vec_small_librispeech_train_8.png
+figs/rsa_relations/wav2vec_small_librispeech_train_9.png
+figs/rsa_relations/wav2vec_small_librispeech_train_10.png
+figs/rsa_relations/wav2vec_small_librispeech_train_11.png
+figs/rsa_relations/wav2vec_small_spokencoco_val_0.png
+figs/rsa_relations/wav2vec_small_spokencoco_val_1.png
+figs/rsa_relations/wav2vec_small_spokencoco_val_2.png
+figs/rsa_relations/wav2vec_small_spokencoco_val_3.png
+figs/rsa_relations/wav2vec_small_spokencoco_val_4.png
+figs/rsa_relations/wav2vec_small_spokencoco_val_5.png
+figs/rsa_relations/wav2vec_small_spokencoco_val_6.png
+figs/rsa_relations/wav2vec_small_spokencoco_val_7.png
+figs/rsa_relations/wav2vec_small_spokencoco_val_8.png
+figs/rsa_relations/wav2vec_small_spokencoco_val_9.png
+figs/rsa_relations/wav2vec_small_spokencoco_val_10.png
+figs/rsa_relations/wav2vec_small_spokencoco_val_11.png
+tree_kernel/libri_trees_0.5_19_delexed_kernel.pt
+tree_kernel/libri_trees_0.5_19_kernel.pt
+tree_kernel/libri_trees_0.5_42_delexed_kernel.pt
+tree_kernel/libri_trees_0.5_666_delexed_kernel.pt
+tree_kernel/libri_trees_0.5_2022_delexed_kernel.pt
+tree_kernel/libri_trees_0.5_2022_kernel.pt
+tree_kernel/scc_trees_0.5_19_delexed_kernel.pt
+tree_kernel/scc_trees_0.5_19_kernel.pt
+tree_kernel/scc_trees_0.5_42_delexed_kernel.pt
+tree_kernel/scc_trees_0.5_666_delexed_kernel.pt
+tree_kernel/scc_trees_0.5_2022_delexed_kernel.pt
+tree_kernel/scc_trees_0.5_2022_kernel.pt
