--- a/.gitignore
+++ b/.gitignore
@@ -219,3 +219,5 @@ __pycache__/extract_sentence_embedding.cpython-39.pyc
 extracted_embeddings/deberta_librispeech_train_sentemb.pt
 extracted_embeddings/deberta_spokencoco_val_sentemb.pt
 logs/*
+pairwise_distances/deberta_librispeech_train_pairwise_distance_full.pt
+pairwise_distances/deberta_spokencoco_val_pairwise_distance_full.pt
