adding regress kernel calc function

--- a/.gitignore
+++ b/.gitignore
@@ -221,3 +221,30 @@ extracted_embeddings/deberta_spokencoco_val_sentemb.pt
 logs/*
 pairwise_distances/deberta_librispeech_train_pairwise_distance_full.pt
 pairwise_distances/deberta_spokencoco_val_pairwise_distance_full.pt
+audio_distance.1615.out
+audio_distance.1618.out
+audio_distance.1619.out
+audio_distance.1620.out
+audio_distance.1621.out
+extracted_embeddings/BOW_librispeech_train_sentemb.pt
+extracted_embeddings/BOW_spokencoco_val_sentemb.pt
+extracted_embeddings/fast-vgs_librispeech_train_extracted.pt
+extracted_embeddings/fast-vgs_plus_librispeech_train_extracted.pt
+extracted_embeddings/fast-vgs_plus_spokencoco_val_extracted.pt
+extracted_embeddings/fast-vgs_spokencoco_val_extracted.pt
+extracted_embeddings/wav2vec_large_en_librispeech_train_extracted.pt
+extracted_embeddings/wav2vec_large_en_spokencoco_val_extracted.pt
+extracted_embeddings/old_generated/fast_vgs_plus_librispeech_train_extracted.pt
+extracted_embeddings/old_generated/fast_vgs_plus_spokencoco_val_extracted.pt
+extracted_embeddings/old_generated/hubert_base_ls960_librispeech_train_extracted.pt
+extracted_embeddings/old_generated/hubert_base_ls960_spokencoco_val_extracted.pt
+extracted_embeddings/old_generated/wav2vec_random_librispeech_train_extracted.pt
+extracted_embeddings/old_generated/wav2vec_random_spokencoco_val_extracted.pt
+extracted_embeddings/old_generated/wav2vec_small_librispeech_train_extracted.pt
+extracted_embeddings/old_generated/wav2vec_small_spokencoco_val_extracted.pt
+pairwise_distances/bow_librispeech_train_pairwise_distance_full.pt
+pairwise_distances/wav2vec_large_en_spokencoco_val_pairwise_distance_full.pt
+pairwise_distances/bow_spokencoco_val_pairwise_distance_full.pt
+pairwise_distances/wav2vec_large_en_librispeech_train_pairwise_distance_full.pt
+tree_kernel/libri_trees_42_regress_kernel.pt
+tree_kernel/scc_trees_42_regress_kernel.pt
